--- a/src/components/WarningAside.module.css
+++ b/src/components/WarningAside.module.css
@@ -43,22 +43,17 @@
 }
 
 .text {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-
   text-align: center;
   font-size: var(--a300);
   line-height: 1.2rem;
-  column-gap: 0.4rem;
 
   padding: 0.6rem 1rem;
   padding-right: 0rem;
 
   a {
-    display: grid;
+    display: inline-grid;
     place-items: center;
+    vertical-align: middle;
 
     svg {
       width: 1.4rem;
